feat: :sparkles: add get all files route
